@@ -1,3 +1,9 @@
+Thu Nov 25 00:07:24 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* conf.rb: メッセージレベルのデフォルト変更
+	* port.rb, session.rb: メッセージレベルに応じたメッセージに変更
+
+
 Fri Nov 12 20:39:56 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* Makefile: push-gem変更
